feat: add plugin sets and profiles

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1441,9 +1441,7 @@
    "metadata": {},
    "source": [
     "## 总结\n",
-    "\n",
     "### 核心 API\n",
-    "\n",
     "| 方法 | 说明 |\n",
     "|------|------|\n",
     "| `ctx.register(*plugins)` | 注册插件 |\n",
@@ -1453,12 +1451,10 @@
     "| `ctx.list_plugin_configs()` | 列出所有插件配置选项 |\n",
     "| `ctx.plot_lineage(data_name)` | 可视化数据血缘 |\n",
     "| `ctx.preview_execution(run_id, data_name)` | 预览执行计划 |\n",
-    "\n",
     "### 下一步学习\n",
-    "\n",
     "- [示例代码](docs/user-guide/EXAMPLES_GUIDE.md) - 更多使用场景\n",
     "- [配置管理](docs/features/context/CONFIGURATION.md) - 配置选项说明\n",
-    "- [数据访问](docs/features/context/DATA_ACCESS.md) - 数据获取详解"
+    "- [数据访问](docs/features/context/DATA_ACCESS.md) - 数据获取详解\n"
    ]
   },
   {
