docs: update tutorials

--- a/tutorial_advanced.ipynb
+++ b/tutorial_advanced.ipynb
@@ -168,11 +168,14 @@
     "    \"show_progress\": True,\n",
     "})\n",
     "# 自定义插件参数\n",
-    "ctx.set_config({\n",
-    "    \"threshold\": 6.0,\n",
-    "    \"dt_ns\": 2.0,\n",
-    "    \"min_width\": 2,\n",
-    "}, plugin_name=\"pulse_width\")\n",
+    "ctx.set_config(\n",
+    "    {\n",
+    "        \"threshold\": 6.0,\n",
+    "        \"dt_ns\": 2.0,\n",
+    "        \"min_width\": 2,\n",
+    "    },\n",
+    "    plugin_name=\"pulse_width\",\n",
+    ")\n",
     "print(\"Context ready.\")\n"
    ]
   },
@@ -225,13 +228,15 @@
     "    if n_events == 0:\n",
     "        continue\n",
     "\n",
-    "    rows.append(pd.DataFrame({\n",
-    "        \"timestamp\": st_ch[\"timestamp\"][:n_events],\n",
-    "        \"channel\": st_ch[\"channel\"][:n_events],\n",
-    "        \"height\": bf_ch[\"height\"][:n_events],\n",
-    "        \"area\": bf_ch[\"area\"][:n_events],\n",
-    "        \"width_ns\": pw_ch[\"width_ns\"][:n_events],\n",
-    "    }))\n",
+    "    rows.append(\n",
+    "        pd.DataFrame({\n",
+    "            \"timestamp\": st_ch[\"timestamp\"][:n_events],\n",
+    "            \"channel\": st_ch[\"channel\"][:n_events],\n",
+    "            \"height\": bf_ch[\"height\"][:n_events],\n",
+    "            \"area\": bf_ch[\"area\"][:n_events],\n",
+    "            \"width_ns\": pw_ch[\"width_ns\"][:n_events],\n",
+    "        })\n",
+    "    )\n",
     "\n",
     "if len(rows) == 0:\n",
     "    df_custom = pd.DataFrame()\n",
@@ -331,9 +336,7 @@
    "source": [
     "## 7. 下一步建议\n",
     "\n",
-    "- 将自定义插件拆分到独立模块，并使用 `PluginSpec` 做严格校验\n",
-    "- 用 `BatchProcessor` + `DataExporter` 批量导出特征数据\n",
-    "- 根据 DAQ 适配器自动推断采样率与时间单位，减少手动配置\n"
+    "- 将自定义插件拆分到独立模块，并使用 `PluginSpec` 做严格校验\n"
    ]
   }
  ],
